--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -245,7 +245,7 @@ $cart-offcanvas-width: 28rem;
 
                     .input-group {
 
-                        &.input-group-focus {
+                        &:focus-within {
 
                             button[type="reset"] {
                                 pointer-events: auto;
@@ -1028,7 +1028,7 @@ $cart-offcanvas-width: 28rem;
 
                     .input-group {
 
-                        &.input-group-focus {
+                        &:focus-within {
 
                             button[type="reset"] {
                                 pointer-events: auto;
