--- a/assets/scss/layout/_product.scss
+++ b/assets/scss/layout/_product.scss
@@ -129,6 +129,8 @@ body {
 				}
 
 				#product-thumb-media-swiper {
+					height: var(--style-product-thumb-media-swiper-height, auto);
+					will-change: height;
 
 					.swiper-slide {
 						border: 2px solid transparent;
