--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -185,7 +185,7 @@
 
                     <div class="product-media-container">
 
-                        <div class="product-media row g-0">
+                        <div class="product-media row g-0" data-dynamic-partial="media">
 
                             <div id="product-thumb-media-swiper" class="swiper swiper-vertical d-none d-lg-block w-px-80 me-g">
 
@@ -204,7 +204,7 @@
                                         {%- assign imgSize = '90,90' -%}
                                     {% endif %}
 
-                                    {% if product.default_or_selected_variant.image %}
+                                    {% if product.default_or_selected_variant.image and product.has_only_default_variant == false %}
 
                                         {%- unless hasImg -%}
                                             {%- assign hasImg = true -%}
@@ -433,7 +433,7 @@
 
                                     {% endif %}
 
-                                    {% if product.default_or_selected_variant.image %}
+                                    {% if product.default_or_selected_variant.image and product.has_only_default_variant == false %}
 
                                         {%- unless hasImg -%}
                                             {%- assign hasImg = true -%}
@@ -728,7 +728,7 @@
 
                 <div class="col-12 col-md-6 col-xxl-5 product-info-container" data-aos="{{ settings.sectionAnimation }}" data-aos-anchor="#finqu-section-{{ section.id }}">
 
-                    <div class="product-info mt-4 mt-md-0">
+                    <div class="product-info mt-4 mt-md-0" data-dynamic-partial="info">
 
                         {% if showManufacturer %}
 
@@ -975,6 +975,16 @@
                                                     value="{{ product.min_quantity }}">
                                             {% endunless %}
 
+                                            {% if section.settings.showRelatedProductsAsOptions and product.related.size > 0 or product.combined_listing.options_with_values.size > 0 %}
+
+                                                <div class="product-combined">
+
+                                                    {% render 'product-combined-options', product: product, showAsDropdown: section.settings.showVariantSelectionAsDropdown, showRelatedProductsAsOptions: section.settings.showRelatedProductsAsOptions %}
+
+                                                </div>
+
+                                            {% endif %}
+
                                             {% unless product.has_only_default_variant %}
 
                                                 <div class="product-variants">
@@ -1201,7 +1211,7 @@
 
                                                     {% endif %}
 
-                                                    {% if settings.accessibilityShowWishlist and section.settings.showBuyNowButton %}
+                                                    {% if settings.accessibilityShowWishlist and section.settings.showBuyNowButton and product.default_or_selected_variant.notifications_supported == false %}
 
                                                         <button
                                                             type="button"
@@ -1962,7 +1972,7 @@
 
                         </div>
 
-                        {% if product.related.size > 0 %}
+                        {% if product.related.size > 0 and section.settings.showRelatedProductsAsOptions == false %}
 
                             {% if settings.productImageAspectRatio == '9:13' %}
                                 {%- assign imgSize = '79,108' -%}
@@ -2093,7 +2103,7 @@
 
         </div>
 
-        {%- if rendered_partial != 'sections/product-template' -%}
+        <div data-dynamic-partial="additional">
 
             {% if product.similar.size > 0 or request.design_mode %}
 
@@ -2139,21 +2149,34 @@
                             {%- endif -%}
                             name: {{ product.title | json }},
                             manufacturer: {{ product.manufacturer.title | json }},
-                            currency: {{ store.currency.iso_code | json }}
+                            currency: {{ store.currency.iso_code | json }},
+                            breadcrumbs: {{ product.breadcrumbs | map: 'title' | json }}
                         }
                     }));
                 });
             </script>
 
-        {%- endif -%}
-
+        </div>
+        
     {% endif %}
 
 {%- endcapture -%}
 
 {%- if rendered_partial == 'sections/product-template' -%}
 
-    {{- sectionContent -}}
+    {% if section.settings.showBreadcrumbs %}
+        {%- assign sectionBreadcrumbs = product.breadcrumbs -%}
+    {% endif %}
+
+    <div class="section-inner">
+
+        {% render 'section-header', sectionBreadcrumbs: sectionBreadcrumbs %}
+
+        <div class="section-content">
+            {{- sectionContent -}}
+        </div>
+
+    </div>
 
 {%- else -%}
 
@@ -2875,6 +2898,32 @@
                         },
                         "default": true,
                         "conditions": ["customDisplayInformation eq true"]
+                    },
+                    {
+                        "type": "title",
+                        "label": {
+                            "en": "Legacy settings",
+                            "fi": "Vanhat asetukset"
+                        }
+                    },
+                    {
+                        "type": "label",
+                        "label": {
+                            "en": "These settings are ment for backwards compatibility and should not be used if you are new merchant.",
+                            "fi": "Nämä asetukset on tarkoitettu taaksepäin yhteensopivuuteen ja niitä ei tulisi käyttää, jos olet uusi kauppias."
+                        }
+                    },
+                    {
+                        "type": "spacer"
+                    },
+                    {
+                        "id": "showRelatedProductsAsOptions",
+                        "type": "checkbox",
+                        "label": {
+                            "en": "Show related products as options",
+                            "fi": "Näytä liittyvät tuotteet valintoina"
+                        },
+                        "default": false
                     }
                 ]
             }
