--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -98,7 +98,7 @@ $cart-offcanvas-width: 28rem;
                             --site-header-logo-items-align: start;
                             --site-header-logo-position: items-start;
                             --site-header-nav-position: items-center;
-                            --site-header-nav-items-align: start;
+                            --site-header-nav-items-align: center;
                             --site-header-actions-position: items-end;
                         }
                     }
