--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -802,6 +802,16 @@
                             @include font-size($font-size-base * 2.3);
                         }
                     }
+
+                    &:has(.site-mobile-header-item-search) {
+
+                        .site-mobile-header-item-logo {
+
+                            .site-mobile-header-logo-text {
+                                max-width: 30vw;
+                            }
+                        }
+                    }
                     
                     .site-mobile-header-item-counter {
                         position: absolute;
