--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -179,6 +179,10 @@
             {%- assign showWishlistCondition = true -%}
         {%- endif -%}
 
+        {%- if settings.productShowSku and product.default_or_selected_variant.sku -%}
+            {%- assign showSku = true -%}
+        {%- endif -%}
+
         {%- assign generalImages = product.images | where: 'attached_to_variant', false -%}
 
         <div class="product-container section-highlight-item section-highlight-item-md mb-md-8">
@@ -878,6 +882,12 @@
 
                                         <span class="product-stock-balance-low-on-stock">
                                             {{- 'product.low_on_stock_dynamic' | t: amount: product.default_or_selected_variant.stock -}}
+                                        </span>
+
+                                    {%- elsif product.default_or_selected_variant.stock < 1 and product.default_or_selected_variant.inventory_policy == 'continue' -%}
+
+                                        <span class="product-stock-balance-backorder">
+                                            {{- 'product.backorder' | t -}}
                                         </span>
 
                                     {%- else -%}
@@ -1821,7 +1831,7 @@
 
                             {% endif %}
 
-                            {% if product.default_or_selected_variant.sku or product.default_or_selected_variant.product_number or product.default_or_selected_variant.gtin %}
+                            {% if showSku or product.default_or_selected_variant.product_number or product.default_or_selected_variant.gtin %}
 
                                 <div class="accordion-item">
 
@@ -1847,7 +1857,7 @@
 
                                         <div class="product-additional-information accordion-body d-grid gap-2">
 
-                                            {% if product.default_or_selected_variant.sku %}
+                                            {% if showSku %}
 
                                                 <div class="d-flex">
 
