--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -60,6 +60,10 @@
                         --site-header-nav-position: nav;
                         --site-header-nav-items-align: center;
                     }
+
+                    .site-header-items-nav-container {
+                        margin-top: var(--site-header-items-padding-y);
+                    }
                 }
 
                 &:has(.site-header-secondary-logo-img) {
@@ -88,7 +92,7 @@
                     
                     .site-header-items-container {
 
-                        .site-header-items{
+                        .site-header-items {
                             grid-template-areas: 'items-start items-center items-end';
                             grid-template-columns: auto 1fr auto;
                             grid-template-rows: 1fr;
@@ -110,7 +114,7 @@
     
                     .site-header-items {
                         grid-template-areas: 'items-start items-center items-end' 'nav nav nav';
-                        grid-template-rows: 1fr 1fr;
+                        grid-template-rows: 1fr auto;
 
                         .site-header-nav-container {
                             border-bottom: 0;
@@ -503,7 +507,7 @@
                         .site-header-sublevel {
                             position: absolute;
                             left: 100%;
-                            top: -#{subtract(spacer(4), 0.015)};
+                            top: -#{spacer(4)};
                             visibility: hidden;
                             width: 100%;
                             display: none;
