--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -879,21 +879,18 @@
         overflow: hidden;
         will-change: transform, visibility, opacity, height, top;
         color: var(--style-text-color);
+        transform: translate3d(-100%,0,0);
+        transition: transform .4s ease-in-out;
 
         &.site-mobile-navigation-visible {
             visibility: visible;
             opacity: 1;
             z-index: 6;
-            transform: translate3d(0,0,0);
         }
 
         &.site-mobile-navigation-active {
-
-            .site-mobile-navigation-layer-root {
-                z-index: 10;
-                transform: translateZ(0);
-                transition: transform .4s cubic-bezier(.75,0,.175,1);
-            }
+            transform: translate3d(0,0,0);
+            transition: transform .4s cubic-bezier(.75,0,.175,1);
         }
 
         .site-mobile-navigation-layer {
@@ -913,7 +910,12 @@
             will-change: transform, visibility, opacity;
             background-color: var(--style-bg-color);
             padding-bottom: spacer(5);
-            overscroll-behavior: none; 
+            overscroll-behavior: none;
+
+            &.site-mobile-navigation-layer-root {
+                z-index: 10;
+                transform: translate3d(0,0,0);
+            }
 
             &.site-mobile-navigation-layer-child {
                 transform: translate3d(100%,0,0);
