--- a/assets/scss/layout/_product.scss
+++ b/assets/scss/layout/_product.scss
@@ -81,7 +81,7 @@ body {
 
 	.product-container {
 
-		.product-media-container {
+		.product-media-container:not(.product-card-grid-item .product-media-container) {
 			position: sticky;
 			top: var(--style-grid-gutter-width);
 
@@ -170,7 +170,7 @@ body {
 					letter-spacing: 0;
 				}
 
-				.product-name {
+				> .product-name {
 
 					.product-name-text {
 						@include font-size($font-size-base * 2);
